# squish-artifacts-example

./: Cargo.toml  build.rs
src/: libsquish.rs  main.rs  wrapper.cpp
