[package]
name = "squish_test_case"
version = "0.1.0"
authors = ["April Wade <wayedt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
squish = { git = "https://github.com/jansol/squish-rs" }

[build-dependencies]
cc = "1"
